@@ -1467,6 +1467,7 @@
 		{_it./sector-9&&_it:sectors-9||}
 		{_it./sector-10&&_it:sectors-10||}
 		{_it./sector-11&&_it:sectors-11||}
+		{_it./sector-12&&_it:sectors-12||}
 		{_it./sector-99&&_it:sectors-99||}
 		{_it./sector-98&&_it:sectors-98||}
 	</div>
@@ -1563,6 +1564,14 @@
 	</div>
 	<div class="subheader">{_it./sector-11.0.@vocabulary-description||} <a href="{_it./sector-11.0.@vocabulary-url}" target="_blank">{_it./sector-11.0.@vocabulary-url}</a></div>
 	{_it./sector-11:/sector||}
+</div>
+#^sectors-12
+<div class="sector_vocab">
+	<div class="header">
+		UN System Function <span class="count">( {_it./sector-12.length||no_length} )</span>
+	</div>
+	<div class="subheader">{_it./sector-12.0.@vocabulary-description||} <a href="{_it./sector-12.0.@vocabulary-url}" target="_blank">{_it./sector-12.0.@vocabulary-url}</a></div>
+	{_it./sector-12:/sector||}
 </div>
 #^sectors-99
 <div class="sector_vocab">
