@@ -1,3 +1,8 @@
+Development Portal (2021-12-07 shi)
+==============================
+Add sector vocab 12 to SAVi
+
+
 Development Portal (2021-12-02 shi)
 ==============================
 Update pid url for SAVi org files
